@@ -21,6 +21,10 @@ ConfBridge
    menus, bridge settings, and user settings that have been applied by the
    CONFBRIDGE dialplan function.
 
+ * The ConfBridge dialplan application now sets a channel variable,
+   CONFBRIGE_RESULT, upon exiting. This variable can be used to determine
+   how a channel exited the conference.
+
  * Added conference user option 'announce_join_leave_review'. This option
    implies 'announce_join_leave' with the added effect that the user will
    be asked if they want to confirm or re-record the recording of their
